--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -4,7 +4,7 @@ region: nyc
 services:
   - name: api
     github:
-      repo: YOUR_GITHUB_USERNAME/YOUR_REPO_NAME
+      repo: AxsolTools/nullroute
       branch: main
       deploy_on_push: true
     run_command: pnpm start
